; ModuleID = '/home/carl/AnghaBench/git/extr_credential-cache--daemon.c_cache_credential.c'
source_filename = "/home/carl/AnghaBench/git/extr_credential-cache--daemon.c_cache_credential.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.credential_cache_entry = type { i64, i32 }
%struct.credential = type { i32 }

@entries = common dso_local global %struct.credential_cache_entry* null, align 8
@entries_nr = common dso_local global i64 0, align 8
@entries_alloc = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.credential*, i32)* @cache_credential to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cache_credential(%struct.credential* %0, i32 %1) #0 {
  %3 = alloca %struct.credential*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.credential_cache_entry*, align 8
  store %struct.credential* %0, %struct.credential** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.credential_cache_entry*, %struct.credential_cache_entry** @entries, align 8
  %7 = load i64, i64* @entries_nr, align 8
  %8 = add nsw i64 %7, 1
  %9 = load i32, i32* @entries_alloc, align 4
  %10 = call i32 @ALLOC_GROW(%struct.credential_cache_entry* %6, i64 %8, i32 %9)
  %11 = load %struct.credential_cache_entry*, %struct.credential_cache_entry** @entries, align 8
  %12 = load i64, i64* @entries_nr, align 8
  %13 = add nsw i64 %12, 1
  store i64 %13, i64* @entries_nr, align 8
  %14 = getelementptr inbounds %struct.credential_cache_entry, %struct.credential_cache_entry* %11, i64 %12
  store %struct.credential_cache_entry* %14, %struct.credential_cache_entry** %5, align 8
  %15 = load %struct.credential_cache_entry*, %struct.credential_cache_entry** %5, align 8
  %16 = getelementptr inbounds %struct.credential_cache_entry, %struct.credential_cache_entry* %15, i32 0, i32 1
  %17 = load %struct.credential*, %struct.credential** %3, align 8
  %18 = call i32 @memcpy(i32* %16, %struct.credential* %17, i32 4)
  %19 = load %struct.credential*, %struct.credential** %3, align 8
  %20 = call i32 @memset(%struct.credential* %19, i32 0, i32 4)
  %21 = call i64 @time(i32* null)
  %22 = load i32, i32* %4, align 4
  %23 = sext i32 %22 to i64
  %24 = add nsw i64 %21, %23
  %25 = load %struct.credential_cache_entry*, %struct.credential_cache_entry** %5, align 8
  %26 = getelementptr inbounds %struct.credential_cache_entry, %struct.credential_cache_entry* %25, i32 0, i32 0
  store i64 %24, i64* %26, align 8
  ret void
}

declare dso_local i32 @ALLOC_GROW(%struct.credential_cache_entry*, i64, i32) #1

declare dso_local i32 @memcpy(i32*, %struct.credential*, i32) #1

declare dso_local i32 @memset(%struct.credential*, i32, i32) #1

declare dso_local i64 @time(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
